tests/specs/ecosystem/angus/use_speech/0_0_1.test
angus/use-speech/0.0.1
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS1205 [ERROR]: Re-exporting a type when 'isolatedModules' is enabled requires using 'export type'.
export { UseSpeechOptions, useSpeech } from "./useSpeech.ts";
         ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:1:10

